@@ -3905,7 +3905,7 @@ div.wiki_header {
 /* NOWIKI TEXT                                 */
 /* ------------------------------------------- */
 /* nowiki text */
-.wiki_preformatted, .woas_nowiki_multiline {
+.woas_nowiki {
 /* CSS-3 */
 	white-space: pre-wrap;
 /* IE 5.5+ */
@@ -3914,6 +3914,12 @@ div.wiki_header {
 	/* white-space: -pre-wrap; */
 /* Opera 7 */
 	/* white-space: -o-pre-wrap; */
+	background-color:#F5F5F5; padding-right:0.27em; padding-left:0.27em;
+}
+
+.woas_nowiki_multiline {
+	border:0.063em solid grey;
+	padding-left: 0.4em;
 }
 
 /* ------------------------------------------- */
@@ -4106,7 +4112,7 @@ div.wiki_header {
 .woas_password_desc,.woas_about_footer,.woas_help_background,.woas_help_button,
 .woas_helpcode,.woas_helptext, .woas_page_mts, div.woas_text_area, .woas_text_area.locked,
 #woas_pwd_mask,.woas_core_page,div.menu,div.menu_area,.woas_menu_button,.title,
-.wiki_preformatted, .woas_nowiki_multiline,pre.woas_search_results,div.wiki_toc,p.wiki_toc_title,
+.woas_nowiki, .woas_nowiki_multiline,pre.woas_search_results,div.wiki_toc,p.wiki_toc_title,
 table.woas_text_area,div.woas_taglinks { }
 --DFQRCTsKlU
 woas.page.title: WoaS::Help::Hotkeys
